greeter/autotests/killtest.cpp
@@ -90,7 +90,7 @@ void KillTest::testKill()
 {
     QProcess greeter(this);
     greeter.setReadChannel(QProcess::StandardOutput);
-    greeter.start(KLibexec::path(KSCREENLOCKER_GREET_BIN), QStringList({QStringLiteral("--testing")}));
+    greeter.start(KLibexec::path(KSCREENLOCKER_GREET_BIN_REL), QStringList({QStringLiteral("--testing")}));
     QVERIFY(greeter.waitForStarted());
 
     // wait some time till it's really set up
@@ -167,7 +167,7 @@ void KillTest::testImmediateKill()
     // this test ensures that the greeter indicates crashexit when a signal is sent to the greeter
     // before it had time to properly setup
     QProcess greeter(this);
-    greeter.start(KLibexec::path(KSCREENLOCKER_GREET_BIN), QStringList({QStringLiteral("--testing")}));
+    greeter.start(KLibexec::path(KSCREENLOCKER_GREET_BIN_REL), QStringList({QStringLiteral("--testing")}));
     QVERIFY(greeter.waitForStarted());
 
     // now kill
